Ajout de la documentation pour les réductions
